[package]
name = "aoc2019"
version = "0.1.0"
edition = "2024"
default-run = "main"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
num_enum = "0.7.4"
thiserror = "2.0.16"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
itertools = "0.14.0"
