[package]
name = "aoc2019"
version = "0.1.0"
edition = "2024"
default-run = "main"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
num_enum = "0.7.4"
thiserror = "2.0.16"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
itertools = "0.14.0"
strum_macros = "0.27.2"
strum = { version = "0.27.2", features = ["strum_macros"] }
gcd = "2.3.0"
ordered-float = "5.1.0"
regex = "1.12.2"
num = "0.4.3"
